plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
}

tasks.register("generateJavadocJar", Jar) {
    classifier = 'javadoc'
    from javadoc
}

tasks.register("generateSourcesJar", Jar) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

tasks.withType(JavaCompile) {
    options.release = 8
}

jar { // assemble jar options [java -jar]
    manifest {
        attributes 'Project': "jSnaploader",
                   'Version': "${version}",
                   'Automatic-Module-Name': "${project.name.replace("-", ".")}",
                   'Compiled-by': JavaVersion.current()
    }
}

dependencies {

}
